<resources>
    <string name="app_name">Calculator</string>
    <string name="title">Assignment 1</string>
    <string name="standard_mode">STANDARD</string>
    <string name="advance_mode">ADVANCE - SCIENTIFIC</string>
    <string name="not_an_operator">Not an Operator</string>
    <string name="_1">1</string>
    <string name="_2">2</string>
    <string name="_3">3</string>
    <string name="plus">+</string>
    <string name="_4">4</string>
    <string name="_5">5</string>
    <string name="_6">6</string>
    <string name="minus">-</string>
    <string name="_7">7</string>
    <string name="_8">8</string>
    <string name="_9">9</string>
    <string name="multiply">*</string>
    <string name="clear">C</string>
    <string name="_0">0</string>
    <string name="equal">=</string>
    <string name="divide">/</string>
    <string name="modulus">%</string>
    <string name="pow">pow</string>
    <string name="max">Max</string>
    <string name="min">Min</string>
</resources>