<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="@dimen/title_height"
        android:paddingStart="@dimen/padding_start"
        android:background="@color/title_color"
        android:gravity="center|start"
        android:text="@string/title"
        android:textColor="@color/white"
        android:textSize="@dimen/title_textSize" />
    <Space
        android:layout_width="match_parent"
        android:layout_height="@dimen/space" />

    <TextView
        android:id="@+id/output"
        android:layout_width="match_parent"
        android:layout_height="@dimen/output_height"
        android:paddingStart="@dimen/padding_start"
        android:textColor="@color/black"
        android:textSize="@dimen/output_textSize"
        />

    <Space
        android:layout_width="match_parent"
        android:layout_height="@dimen/space" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal">

        <Button
            android:id="@+id/one"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:backgroundTint="@color/button_color"
            style="?android:attr/buttonBarButtonStyle"

            android:text="@string/_1"
            android:textColor="@color/black"
            android:textSize="@dimen/buttonText_size" />

        <Button
            android:id="@+id/two"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:backgroundTint="@color/button_color"
            style="?android:attr/buttonBarButtonStyle"

            android:text="@string/_2"
            android:textColor="@color/black"
            android:textSize="@dimen/buttonText_size" />

        <Button
            android:id="@+id/three"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:backgroundTint="@color/button_color"
            style="?android:attr/buttonBarButtonStyle"

            android:text="@string/_3"
            android:textColor="@color/black"
            android:textSize="@dimen/buttonText_size" />

        <Button
            android:id="@+id/plus"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:backgroundTint="@color/button_color"
            style="?android:attr/buttonBarButtonStyle"

            android:text="@string/plus"
            android:textColor="@color/black"
            android:textSize="@dimen/buttonText_size" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal">

        <Button
            android:id="@+id/four"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:backgroundTint="@color/button_color"
            style="?android:attr/buttonBarButtonStyle"

            android:text="@string/_4"
            android:textColor="@color/black"
            android:textSize="@dimen/buttonText_size" />

        <Button
            android:id="@+id/five"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:backgroundTint="@color/button_color"
            style="?android:attr/buttonBarButtonStyle"

            android:text="@string/_5"
            android:textColor="@color/black"
            android:textSize="@dimen/buttonText_size" />

        <Button
            android:id="@+id/six"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:backgroundTint="@color/button_color"
            style="?android:attr/buttonBarButtonStyle"

            android:text="@string/_6"
            android:textColor="@color/black"
            android:textSize="@dimen/buttonText_size" />

        <Button
            android:id="@+id/minus"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:backgroundTint="@color/button_color"
            style="?android:attr/buttonBarButtonStyle"

            android:text="@string/minus"
            android:textColor="@color/black"
            android:textSize="@dimen/buttonText_size" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal">

        <Button
            android:id="@+id/seven"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:backgroundTint="@color/button_color"
            style="?android:attr/buttonBarButtonStyle"

            android:text="@string/_7"
            android:textColor="@color/black"
            android:textSize="@dimen/buttonText_size" />

        <Button
            android:id="@+id/eight"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:backgroundTint="@color/button_color"
            style="?android:attr/buttonBarButtonStyle"

            android:text="@string/_8"
            android:textColor="@color/black"
            android:textSize="@dimen/buttonText_size" />

        <Button
            android:id="@+id/nine"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:backgroundTint="@color/button_color"
            style="?android:attr/buttonBarButtonStyle"

            android:text="@string/_9"
            android:textColor="@color/black"
            android:textSize="@dimen/buttonText_size" />

        <Button
            android:id="@+id/multiply"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:backgroundTint="@color/button_color"
            style="?android:attr/buttonBarButtonStyle"

            android:text="@string/multiply"
            android:textColor="@color/black"
            android:textSize="@dimen/buttonText_size" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal">

        <Button
            android:id="@+id/clear"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:backgroundTint="@color/button_color"
            style="?android:attr/buttonBarButtonStyle"

            android:text="@string/clear"
            android:textColor="@color/black"
            android:textSize="@dimen/buttonText_size" />

        <Button
            android:id="@+id/zero"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:backgroundTint="@color/button_color"
            style="?android:attr/buttonBarButtonStyle"

            android:text="@string/_0"
            android:textColor="@color/black"
            android:textSize="@dimen/buttonText_size" />

        <Button
            android:id="@+id/equal"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:backgroundTint="@color/button_color"
            style="?android:attr/buttonBarButtonStyle"

            android:text="@string/equal"
            android:textColor="@color/black"
            android:textSize="@dimen/buttonText_size" />

        <Button
            android:id="@+id/divide"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:backgroundTint="@color/button_color"
            style="?android:attr/buttonBarButtonStyle"

            android:text="@string/divide"
            android:textColor="@color/black"
            android:textSize="@dimen/buttonText_size" />
    </LinearLayout>

    <Button
        android:id="@+id/calculator_mode"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/mode_marginTop"
        android:paddingVertical="@dimen/mode_paddingV"
        android:paddingHorizontal="@dimen/mode_paddingH"
        android:backgroundTint="@color/calMode_color"
        android:text="@string/advance_mode"
        android:textColor="@color/white"
        android:textSize="@dimen/buttonText_size"
        />

    <Space
        android:layout_width="match_parent"
        android:layout_height="@dimen/advance_space" />

    <LinearLayout
        android:id="@+id/advance_buttons_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal">

        <Button
            android:id="@+id/modulus"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:backgroundTint="@color/button_color"
            style="?android:attr/buttonBarButtonStyle"

            android:text="@string/modulus"
            android:textColor="@color/black"
            android:textSize="@dimen/buttonText_size" />

        <Button
            android:id="@+id/power"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:backgroundTint="@color/button_color"
            style="?android:attr/buttonBarButtonStyle"

            android:text="@string/pow"
            android:textColor="@color/black"
            android:textSize="@dimen/buttonText_size" />

        <Button
            android:id="@+id/max"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:backgroundTint="@color/button_color"
            style="?android:attr/buttonBarButtonStyle"

            android:text="@string/max"
            android:textColor="@color/black"
            android:textSize="@dimen/buttonText_size" />

        <Button
            android:id="@+id/min"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:backgroundTint="@color/button_color"
            style="?android:attr/buttonBarButtonStyle"

            android:text="@string/min"
            android:textColor="@color/black"
            android:textSize="@dimen/buttonText_size" />
    </LinearLayout>

</LinearLayout>
